.metadata/.plugins/org.eclipse.cdt.ui/dht11_lan3.build.log
14:58:01 **** Incremental Build of configuration Debug for project dht11_lan3 ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c:58:6: error: conflicting types for 'DHT11_ReadData'; have 'void(uint8_t *, uint8_t *)' {aka 'void(unsigned char *, unsigned char *)'}
   58 | void DHT11_ReadData(uint8_t *temperature, uint8_t *humidity) {
      |      ^~~~~~~~~~~~~~
In file included from ../Core/Src/main.c:4:
../Core/Inc/onewire.h:12:9: note: previous declaration of 'DHT11_ReadData' with type 'uint8_t(float *, float *)' {aka 'unsigned char(float *, float *)'}
   12 | uint8_t DHT11_ReadData(float *temperature, float *humidity);
      |         ^~~~~~~~~~~~~~
../Core/Inc/onewire.h:13:16: warning: 'DHT11_ReadByte' declared 'static' but never defined [-Wunused-function]
   13 | static uint8_t DHT11_ReadByte(void);
      |                ^~~~~~~~~~~~~~
../Core/Inc/onewire.h:14:13: warning: 'DHT11_Delay' declared 'static' but never defined [-Wunused-function]
   14 | static void DHT11_Delay(uint32_t time);
      |             ^~~~~~~~~~~
make: *** [Core/Src/subdir.mk:40: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

14:58:01 Build Failed. 2 errors, 2 warnings. (took 444ms)

